--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "bootstrap": "npm install && cd test && npm install",
     "clean-modules": "rm -rf ./node_modules && rm ./package-lock.json",
-    "build": "babel ./src -d ./lib",
+    "build": "npm exec -- babel ./src -d ./lib",
     "clean": "rm -rf ./lib",
     "prepublish": "npm run clean && cross-env NODE_ENV=${DEVEBOT_NODE_ENV:-production} npm run build",
     "pretest": "npm run clean && cross-env NODE_ENV=${DEVEBOT_NODE_ENV:-test} npm run build",
@@ -50,10 +50,12 @@
     "babel-plugin-minify-mangle-names": "^0.5.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
+    "eslint-config-promise": "^2.0.2",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-standard": "^4.0.0"
   }
 }
