SaolaJS: converts the package app-restfront to saola-plugin-restfront

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,5 +1,5 @@
-name: app-restfront
-title: "Devebot Plugin: Restfront"
+name: @saola/plugin-restfront
+title: "Saola Plugin: Restfront"
 version: master
 nav:
 - modules/ROOT/nav.adoc
