Enhances the npm scripts

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "setup-modules": "npm install --ignore-scripts; npm --prefix=test install --ignore-scripts",
     "reset-modules": "npm run clean-modules && npm run setup-modules",
     "build": "npm exec -- babel ./src -d ./lib",
-    "check": "npm exec -- eslint ./src index.js",
-    "check-silent": "npm exec -- eslint --quiet ./src index.js",
+    "check": "npm exec -- eslint config src index.js",
+    "check-silent": "npm exec -- eslint --quiet config src index.js",
     "pretest": "npm run clean && NODE_ENV=${SAOLA_NODE_ENV:-test} npm run build",
     "testOnly": "npm --prefix=test exec -- mocha --recursive ./test/tdd/*-test.js ./test/bdd/*-test.js",
     "test": "npm run testOnly",
