--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@saola/core": "^0.4.0",
     "@saola/plugin-errorlist": "^0.4.0",
     "@saola/plugin-logtracer": "^0.4.0",
+    "path-to-regexp": "^6.2.1",
     "schema-validator": "3.3.1",
     "ua-parser-js": "1.0.33"
   },
